syntax = "proto3";

option csharp_namespace = "ImoutoDesktop.Remoting";

import "google/protobuf/empty.proto";

service RemoteService {
    rpc Login (LoginRequest) returns (GenericResponse) {}
    rpc Heartbeat (google.protobuf.Empty) returns (GenericResponse) {}
    rpc Grep (GrepRequest) returns (GrepResponse) {}
    rpc Exists (ExistsRequest) returns (ExistsResponse) {}
    rpc Delete (DeleteRequest) returns (GenericResponse) {}
}

message LoginRequest {
    string password = 1;
}

message GenericResponse {
    bool succeeded = 1;
}

message GrepRequest {
    string path = 1;
    string searchPattern = 2;
}

message GrepResponse {
    repeated string files = 1;
}

message ExistsRequest {
    string path = 1;
}

message ExistsResponse {
    bool exists = 1;
    bool kind = 2;
}

message DeleteRequest {
    string path = 1;
}
